--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
+This is my Horse, my Horse is amazing.
+
 <body>
 <div class="container">
   <header class="row">
