--- a/impress.html
+++ b/impress.html
@@ -20,32 +20,24 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="createEntry.html">New Entry</a></li>
-            <li><a href="impress.html">Impress</a></li>
+            <li class="active"><a href="impress.html">Impress</a></li>
           </ul>
           <a class="navbar-brand navbar-right" href="http://www.tu-berlin.de" target="blank"><img alt="Technische Universität Berlin" src="img/tub_logo.png" width="25"></a>
         </div>
       </div>
     </nav>
   </header>
-  <div class="row" id="content">  
-      <form>
-          <div class="col-xs-6 form-group">
-            <label for="dateInput">Date</label>
-            <input type="date" class="form-control" id="dateInput" value="2015-04-23">
-          </div>  
-          <div class="col-xs-6 form-group">
-            <label for="progInput">Progress</label>
-            <input type="number" class="form-control" id="progInput" min="0" max="100" placeholder="Progress in % ..." value="100">
-          </div>
-          <div class="col-xs-12 form-group">
-            <label for="descInput">Description</label>
-            <textarea class="form-control" id="descInput" placeholder="Describe your task ..." rows="3">clean the dishes</textarea>
-          </div>
-          <div class="col-xs-12 form-group text-center">
-            <button type="submit" class="btn btn-primary" id="saveButton">Save changes</button>
-            <button type="submit" class="btn btn-default" id="cancelButton">Cancel</button>
-          </div>
-      </form>  
+  <div class="row" id="content">
+  	<h3>Impressum</h3>
+    <p class="text-justify">Inhaltlich verantwortlich gemäß &sect;5 TMG ist T. Tietz.<br>
+	<br>
+    Trotz sorgfältiger inhaltlicher Kontrolle übernehmen wir keine Haftung für die Inhalte externer Links. Für den Inhalt der verlinkten Seiten sind ausschließlich deren Betreiber verantwortlich. Mit dem Urteil vom 12. Mai 1998 hat das Landgericht Hamburg entschieden, dass man durch die Anbringung eines Links die Inhalte der gelinkten Seiten ggf. mit zu verantworten hat. Dies kann nur dadurch verhindert werden, dass man sich ausdrücklich von diesem Inhalt distanziert. Für alle Links auf dieser Homepage gilt: Wir distanzieren uns hiermit ausdrücklich von allen Inhalten aller gelinkten Seiten auf dieser Homepage und machen uns diese Inhalte nicht zu Eigen.</p>
+    <h3>PPSN 2 DO - Team</h3>
+    K. Schmidt<br>
+    karl.p.schmidt (at) campus.tu-berlin.de<br>
+    <br>
+    T. Tietz<br>
+    t.tietz (at) campus.tu-berlin.de
   </div>
   <footer class="row text-center">
     <section>
