--- a/index.html
+++ b/index.html
@@ -9,39 +9,35 @@
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
 <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
-<body>
+
+<body id="page">
 <div class="container">
   <header class="row">
     <nav class="navbar navbar-default">
       <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">PPSN 2 DO</a>
-        </div>
+        <div class="navbar-header"><a class="navbar-brand" href="index.html">PPSN 2 DO</a></div>
         <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="" role="presentation">Home</a></li>
-                <li><a href="" role="presentation">New Entry</a></li>
-                <li><a href="" role="presentation">Impress</a></li>
-            </ul>
-        	<a class="navbar-brand navbar-right" href="http://www.tu-berlin.de" target="blank"><img alt="Technische Universität Berlin" src="img/tub_logo.png" width="25"></a>
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="createEntry.html">New Entry</a></li>
+            <li><a href="impress.html">Impress</a></li>
+          </ul>
+          <a class="navbar-brand navbar-right" href="http://www.tu-berlin.de" target="blank"><img alt="Technische Universität Berlin" src="img/tub_logo.png" width="25"></a>
         </div>
       </div>
     </nav>
   </header>
   <nav class="row pull-right" style="margin-bottom: 15px; margin-right: 0px;">
-	<div class="btn-group">
+    <div class="btn-group">
       <button type="button" class="btn btn-default">List: 5</button>
-      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-        <span class="caret"></span>
-        <span class="sr-only">Toggle Dropdown</span>
-      </button>
+      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span><span class="sr-only">Toggle Dropdown</span></button>
       <ul class="dropdown-menu" role="menu" style="min-width: 91px;">
-        <li><a class="text-center" href="#">5</a></li>
-        <li><a class="text-center" href="#">10</a></li>
-        <li><a class="text-center" href="#">25</a></li>
-        <li><a class="text-center" href="#">All</a></li>
+        <li><a class="text-center" href="">5</a></li>
+        <li><a class="text-center" href="">10</a></li>
+        <li><a class="text-center" href="">25</a></li>
+        <li><a class="text-center" href="">All</a></li>
       </ul>
-    </div>  	
+    </div>
   </nav>
   <div class="row" id="content">
     <table class="table table-striped table-hover" id="toDoList">
@@ -54,113 +50,60 @@
       <tr class="success">
         <td>23. April 2015
         <td>Clean the dishes
-        <td>
-            <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="min-width: 0%; width: 100%;">
-                100%
-              </div>
-            </div>
-        <td>
-            <button type="button" class="btn btn-primary btn-xs btn-block" aria-label="Left Align">
-              <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-            </button>
-        <td>
-            <button type="button" class="btn btn-default btn-xs btn-block" aria-label="Left Align">
-              <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-            </button>
+        <td><div class="progress"><div class="progress-bar" role="progressbar" style="min-width: 0%; width: 100%;">100%</div></div>
+        <td><a href="editEntry.html"><button type="button" class="btn btn-primary btn-xs btn-block"><span class="glyphicon glyphicon-pencil"></span></button></a>
+        <td><button type="button" class="btn btn-default btn-xs btn-block"><span class="glyphicon glyphicon-trash"></span></button>
       <tr class="warning">
         <td>27. April 2015
         <td>Consultation Task 1 (PPSN)
-        <td>
-            <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: 10%;">
-                10%
-              </div>
-            </div>
-        <td>
-            <button type="button" class="btn btn-primary btn-xs btn-block" aria-label="Left Align">
-              <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-            </button>
-        <td>
-            <button type="button" class="btn btn-default btn-xs btn-block" aria-label="Left Align">
-              <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-            </button>
+        <td><div class="progress"><div class="progress-bar" role="progressbar" style="min-width: 2em; width: 10%;">10%</div></div>
+        <td><a href="editEntry.html"><button type="button" class="btn btn-primary btn-xs btn-block"><span class="glyphicon glyphicon-pencil"></span></button></a>
+        <td><button type="button" class="btn btn-default btn-xs btn-block"><span class="glyphicon glyphicon-trash"></span></button>
       <tr>
         <td>07. Mai 2015
         <td>Birthday Brother
-        <td>
-            <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: 15%;">
-                15%
-              </div>
-            </div>
-        <td>
-            <button type="button" class="btn btn-primary btn-xs btn-block" aria-label="Left Align">
-              <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-            </button>
-        <td>
-            <button type="button" class="btn btn-default btn-xs btn-block" aria-label="Left Align">
-              <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-            </button>
+        <td><div class="progress"><div class="progress-bar" role="progressbar" style="min-width: 2em; width: 15%;">15%</div></div>
+        <td><a href="editEntry.html"><button type="button" class="btn btn-primary btn-xs btn-block"><span class="glyphicon glyphicon-pencil"></span></button></a>
+        <td><button type="button" class="btn btn-default btn-xs btn-block"><span class="glyphicon glyphicon-trash"></span></button>
       <tr class="danger">
         <td>31. Mai 2015
         <td>Deadline QISPOS (Anwendungssysteme)
-        <td>
-            <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: 20%;">
-                20%
-              </div>
-            </div>
-        <td>
-            <button type="button" class="btn btn-primary btn-xs btn-block" aria-label="Left Align">
-              <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-            </button>
-        <td>
-            <button type="button" class="btn btn-default btn-xs btn-block" aria-label="Left Align">
-              <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-            </button>
+        <td><div class="progress"><div class="progress-bar" role="progressbar" style="min-width: 2em; width: 20%;">20%</div></div>
+        <td><a href="editEntry.html"><button type="button" class="btn btn-primary btn-xs btn-block"><span class="glyphicon glyphicon-pencil"></span></button></a>
+        <td><button type="button" class="btn btn-default btn-xs btn-block"><span class="glyphicon glyphicon-trash"></span></button>
       <tr class="warning">
         <td>08. Mai 2015
         <td>Consultation Project (PPSN)
-        <td>
-            <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: 25%;">
-                25%
-              </div>
-            </div>
-        <td>
-            <button type="button" class="btn btn-primary btn-xs btn-block" aria-label="Left Align">
-              <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-            </button>
-        <td>
-            <button type="button" class="btn btn-default btn-xs btn-block" aria-label="Left Align">
-              <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-            </button>
+        <td><div class="progress"><div class="progress-bar" role="progressbar" style="min-width: 2em; width: 25%;">25%</div></div>
+        <td><a href="editEntry.html"><button type="button" class="btn btn-primary btn-xs btn-block"><span class="glyphicon glyphicon-pencil"></span></button></a>
+        <td><button type="button" class="btn btn-default btn-xs btn-block"><span class="glyphicon glyphicon-trash"></span></button>
     </table>
   </div>
   <footer class="row text-center">
     <nav>
       <ul class="pagination">
-        <li><a href="" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a>
+        <li><a href=""><span>&laquo;</span></a>
         <li><a href="page1.html">1</a>
         <li><a href="page2.html">2</a>
         <li><a href="page3.html">3</a>
-        <li><a href="#" aria-label="Next"><span aria-hidden="true">&raquo;</span></a>
+        <li><a href=""><span>&raquo;</span></a>
       </ul>
     </nav>
     <section>
-    	<nav class="col-lg-12 navbar text-center" role="navigation">
-        	<ul class="nav nav-pills" style="display: inline-block !important">
-            	<li><a href="index.html">Home</a></li>
-                <li><a href="createNew.html">New Entry</a></li>
-                <li><a href="impress.html">Impress</a></li>
-            </ul>
-        </nav>
+      <nav class="col-lg-12 navbar text-center">
+        <ul class="nav nav-pills" style="display: inline-block !important">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="createEntry.html">New Entry</a></li>
+          <li><a href="impress.html">Impress</a></li>
+        </ul>
+      </nav>
     </section>
-    <p class="copy text-uppercase">&copy;2015 Technische Universit&auml;t Berlin - CIT Programmierpraktikum &times; T. Tietz, K. Schmidt</p>
+    <p class="copy text-uppercase">2015 Technische Universit&auml;t Berlin<br>
+      &times; CIT Programmierpraktikum &times;<br>
+      T. Tietz, K. Schmidt</p>
   </footer>
 </div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> 
 <script src="js/bootstrap.js" type="text/javascript"></script> 
 <script src="js/npm.js" type="text/javascript"></script>
