--- a/impress.html
+++ b/impress.html
@@ -40,16 +40,16 @@
     t.tietz (at) campus.tu-berlin.de
   </div>
   <footer class="row text-center">
-    <section>
-      <nav class="col-lg-12 navbar text-center">
+    <section class="col-xs-12">
+      <nav class="navbar">
         <ul class="nav nav-pills" style="display: inline-block !important">
           <li><a href="index.html">Home</a></li>
-          <li><a href="createNew.html">New Entry</a></li>
+          <li><a href="createEntry.html">New Entry</a></li>
           <li><a href="impress.html">Impress</a></li>
         </ul>
       </nav>
     </section>
-    <p class="copy text-uppercase">2015 Technische Universit&auml;t Berlin<br>
+    <p class="col-xs-12 copy text-uppercase">2015 Technische Universit&auml;t Berlin<br>
       &times; CIT Programmierpraktikum &times;<br>
       T. Tietz, K. Schmidt</p>
   </footer>
