--- a/index.html
+++ b/index.html
@@ -27,61 +27,77 @@
       </div>
     </nav>
   </header>
-  <nav class="row pull-right" style="margin-bottom: 15px; margin-right: 0px;">
+  <nav class="row pull-right" style="margin-bottom: 15px; padding-right: 0px;">
     <div class="btn-group">
       <button type="button" class="btn btn-default">List: 5</button>
       <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span><span class="sr-only">Toggle Dropdown</span></button>
-      <ul class="dropdown-menu" role="menu" style="min-width: 91px;">
-        <li><a class="text-center" href="">5</a></li>
-        <li><a class="text-center" href="">10</a></li>
-        <li><a class="text-center" href="">25</a></li>
-        <li><a class="text-center" href="">All</a></li>
+      <ul class="dropdown-menu">
+        <li><a href="">5</a></li>
+        <li><a href="">10</a></li>
+        <li><a href="">25</a></li>
+        <li><a href="">All</a></li>
       </ul>
     </div>
   </nav>
   <div class="row" id="content">
     <table class="table table-striped table-hover" id="toDoList">
       <tr>
-        <th>Date
-        <th>Description
-        <th>Progress
-        <th width="60">Edit
-        <th width="60">Delete
+        <th>Date</th>
+        <th>Description</th>
+        <th>Progress</th>
+        <th width="60">Edit</th>
+        <th width="60">Delete</th>
+      </tr>
       <tr class="success">
-        <td>23. April 2015
-        <td>Clean the dishes
-        <td><div class="progress"><div class="progress-bar" role="progressbar" style="min-width: 0%; width: 100%;">100%</div></div>
-        <td><a href="editEntry.html"><button type="button" class="btn btn-primary btn-xs btn-block"><span class="glyphicon glyphicon-pencil"></span></button></a>
-        <td><button type="button" class="btn btn-default btn-xs btn-block"><span class="glyphicon glyphicon-trash"></span></button>
+        <td>23. April 2015</td>
+        <td>Clean the dishes</td>
+        <td><div class="progress"><div class="progress-bar" style="min-width: 0%; width: 100%;">100%</div></div></td>
+        <td><a href="editEntry.html"><button type="button" class="btn btn-primary btn-xs btn-block"><span class="glyphicon glyphicon-pencil"></span></button></a></td>
+        <td><button type="button" class="btn btn-default btn-xs btn-block"><span class="glyphicon glyphicon-trash"></span></button></td>
+      </tr>
       <tr class="warning">
-        <td>27. April 2015
-        <td>Consultation Task 1 (PPSN)
-        <td><div class="progress"><div class="progress-bar" role="progressbar" style="min-width: 2em; width: 10%;">10%</div></div>
-        <td><a href="editEntry.html"><button type="button" class="btn btn-primary btn-xs btn-block"><span class="glyphicon glyphicon-pencil"></span></button></a>
-        <td><button type="button" class="btn btn-default btn-xs btn-block"><span class="glyphicon glyphicon-trash"></span></button>
+        <td>27. April 2015</td>
+        <td>Consultation Task 1 (PPSN)</td>
+        <td><div class="progress"><div class="progress-bar" style="min-width: 2em; width: 10%;">10%</div></div></td>
+        <td><a href="editEntry.html"><button type="button" class="btn btn-primary btn-xs btn-block"><span class="glyphicon glyphicon-pencil"></span></button></a></td>
+        <td><button type="button" class="btn btn-default btn-xs btn-block"><span class="glyphicon glyphicon-trash"></span></button></td>
+      </tr>
       <tr>
-        <td>07. Mai 2015
-        <td>Birthday Brother
-        <td><div class="progress"><div class="progress-bar" role="progressbar" style="min-width: 2em; width: 15%;">15%</div></div>
-        <td><a href="editEntry.html"><button type="button" class="btn btn-primary btn-xs btn-block"><span class="glyphicon glyphicon-pencil"></span></button></a>
-        <td><button type="button" class="btn btn-default btn-xs btn-block"><span class="glyphicon glyphicon-trash"></span></button>
+        <td>07. Mai 2015</td>
+        <td>Birthday Brother</td>
+        <td><div class="progress"><div class="progress-bar" style="min-width: 2em; width: 15%;">15%</div></div></td>
+        <td><a href="editEntry.html"><button type="button" class="btn btn-primary btn-xs btn-block"><span class="glyphicon glyphicon-pencil"></span></button></a></td>
+        <td><button type="button" class="btn btn-default btn-xs btn-block"><span class="glyphicon glyphicon-trash"></span></button></td>
+      </tr>
       <tr class="danger">
-        <td>31. Mai 2015
-        <td>Deadline QISPOS (Anwendungssysteme)
-        <td><div class="progress"><div class="progress-bar" role="progressbar" style="min-width: 2em; width: 20%;">20%</div></div>
-        <td><a href="editEntry.html"><button type="button" class="btn btn-primary btn-xs btn-block"><span class="glyphicon glyphicon-pencil"></span></button></a>
-        <td><button type="button" class="btn btn-default btn-xs btn-block"><span class="glyphicon glyphicon-trash"></span></button>
+        <td>31. Mai 2015</td>
+        <td>Deadline QISPOS (Anwendungssysteme)</td>
+        <td><div class="progress"><div class="progress-bar" style="min-width: 2em; width: 20%;">20%</div></div></td>
+        <td><a href="editEntry.html"><button type="button" class="btn btn-primary btn-xs btn-block"><span class="glyphicon glyphicon-pencil"></span></button></a></td>
+        <td><button type="button" class="btn btn-default btn-xs btn-block"><span class="glyphicon glyphicon-trash"></span></button></td>
+      </tr>
       <tr class="warning">
-        <td>08. Mai 2015
-        <td>Consultation Project (PPSN)
-        <td><div class="progress"><div class="progress-bar" role="progressbar" style="min-width: 2em; width: 25%;">25%</div></div>
-        <td><a href="editEntry.html"><button type="button" class="btn btn-primary btn-xs btn-block"><span class="glyphicon glyphicon-pencil"></span></button></a>
-        <td><button type="button" class="btn btn-default btn-xs btn-block"><span class="glyphicon glyphicon-trash"></span></button>
+        <td>08. Mai 2015</td>
+        <td>Consultation Project (PPSN)</td>
+        <td><div class="progress"><div class="progress-bar" style="min-width: 2em; width: 25%;">25%</div></div></td>
+        <td><a href="editEntry.html"><button type="button" class="btn btn-primary btn-xs btn-block"><span class="glyphicon glyphicon-pencil"></span></button></a></td>
+        <td><button type="button" class="btn btn-default btn-xs btn-block"><span class="glyphicon glyphicon-trash"></span></button></td>
+      </tr>
+    </table>
+    <table class="table table-striped text-center">
+      <tr>
+        <th colspan="3">Legend</th>
+      </tr>
+      <tr>
+        <td class="success">Task completed</td>
+        <td class="warning">Task important</td>
+        <td class="danger">Task cancelled</td>
+      </tr>
     </table>
   </div>
   <footer class="row text-center">
-    <nav>
-      <ul class="pagination">
+    <nav class="col-xs-12">
+      <ul class="pagination" style="margin-top: 0 !important;">
         <li><a href=""><span>&laquo;</span></a>
         <li><a href="page1.html">1</a>
         <li><a href="page2.html">2</a>
@@ -89,8 +105,8 @@
         <li><a href=""><span>&raquo;</span></a>
       </ul>
     </nav>
-    <section>
-      <nav class="col-lg-12 navbar text-center">
+    <section class="col-xs-12">
+      <nav class="navbar">
         <ul class="nav nav-pills" style="display: inline-block !important">
           <li><a href="index.html">Home</a></li>
           <li><a href="createEntry.html">New Entry</a></li>
@@ -98,7 +114,7 @@
         </ul>
       </nav>
     </section>
-    <p class="copy text-uppercase">2015 Technische Universit&auml;t Berlin<br>
+    <p class="col-xs-12 copy text-uppercase">2015 Technische Universit&auml;t Berlin<br>
       &times; CIT Programmierpraktikum &times;<br>
       T. Tietz, K. Schmidt</p>
   </footer>
