--- a/editEntry.html
+++ b/editEntry.html
@@ -16,45 +16,45 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header"><a class="navbar-brand" href="index.html">PPSN 2 DO</a></div>
-        <div class="collapse navbar-collapse">
+        <div class="navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="createEntry.html">New Entry</a></li>
             <li><a href="impress.html">Impress</a></li>
           </ul>
-          <a class="navbar-brand navbar-right" href="http://www.tu-berlin.de" target="blank"><img alt="Technische Universität Berlin" src="img/tub_logo.png" width="25"></a>
+          <a class="navbar-brand navbar-right hidden-xs" href="http://www.tu-berlin.de" target="blank"><img alt="Technische Universität Berlin" src="img/tub_logo.png" width="25"></a>
         </div>
       </div>
     </nav>
   </header>
-  <div class="row" id="content">  
-      <form>
-          <div class="col-xs-4 form-group">
-            <label for="dateInput">Date</label>
-            <input type="date" class="form-control" id="dateInput" value="2015-04-23">
-          </div>  
-          <div class="col-xs-4 form-group">
-            <label for="progInput">Progress</label>
-            <input type="number" class="form-control" id="progInput" min="0" max="100" placeholder="Progress in % ..." value="100">
-          </div>
-          <div class="col-xs-4 form-group">
-            <label for="statSelect">Status</label>
-            <select class="form-control" id="statSelect">
-              <option>in progress</option>
-              <option selected>done</option>
-              <option>important</option>
-              <option>cancelled</option>
-            </select>
-          </div>
-          <div class="col-xs-12 form-group">
-            <label for="descInput">Description</label>
-            <textarea class="form-control" id="descInput" placeholder="Describe your task ..." rows="3">clean the dishes</textarea>
-          </div>
-          <div class="col-xs-12 form-group text-center">
-            <button type="submit" class="btn btn-primary" id="saveButton">Save changes</button>
-            <button type="submit" class="btn btn-default" id="cancelButton">Cancel</button>
-          </div>
-      </form>  
+  <div class="row" id="content">
+    <form>
+      <div class="col-xs-12 col-sm-4 form-group">
+        <label for="dateInput">Date</label>
+        <input type="date" class="form-control" id="dateInput" value="2015-04-23">
+      </div>
+      <div class="col-xs-6 col-sm-4 form-group">
+        <label for="progInput">Progress</label>
+        <input type="number" class="form-control" id="progInput" min="0" max="100" placeholder="Progress in % ..." value="100">
+      </div>
+      <div class="col-xs-6 col-sm-4 form-group">
+        <label for="statSelect">Status</label>
+        <select class="form-control" id="statSelect">
+          <option>in progress</option>
+          <option selected>done</option>
+          <option>important</option>
+          <option>cancelled</option>
+        </select>
+      </div>
+      <div class="col-xs-12 form-group">
+        <label for="descInput">Description</label>
+        <textarea class="form-control" id="descInput" placeholder="Describe your task ..." rows="3">clean the dishes</textarea>
+      </div>
+      <div class="col-xs-12 form-group text-center">
+        <button type="submit" class="btn btn-primary" id="saveButton">Save changes</button>
+        <button type="submit" class="btn btn-default" id="cancelButton">Cancel</button>
+      </div>
+    </form>
   </div>
   <footer class="row text-center">
     <section class="col-xs-12">
