--- a/impress.html
+++ b/impress.html
@@ -16,29 +16,28 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header"><a class="navbar-brand" href="index.html">PPSN 2 DO</a></div>
-        <div class="collapse navbar-collapse">
+        <div class="navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
             <li><a href="createEntry.html">New Entry</a></li>
             <li class="active"><a href="impress.html">Impress</a></li>
           </ul>
-          <a class="navbar-brand navbar-right" href="http://www.tu-berlin.de" target="blank"><img alt="Technische Universität Berlin" src="img/tub_logo.png" width="25"></a>
+          <a class="navbar-brand navbar-right hidden-xs" href="http://www.tu-berlin.de" target="blank"><img alt="Technische Universität Berlin" src="img/tub_logo.png" width="25"></a>
         </div>
       </div>
     </nav>
   </header>
   <div class="row" id="content">
-  	<h3>Impressum</h3>
+    <h3>Impressum</h3>
     <p class="text-justify">Inhaltlich verantwortlich gemäß &sect;5 TMG ist T. Tietz.<br>
-	<br>
-    Trotz sorgfältiger inhaltlicher Kontrolle übernehmen wir keine Haftung für die Inhalte externer Links. Für den Inhalt der verlinkten Seiten sind ausschließlich deren Betreiber verantwortlich. Mit dem Urteil vom 12. Mai 1998 hat das Landgericht Hamburg entschieden, dass man durch die Anbringung eines Links die Inhalte der gelinkten Seiten ggf. mit zu verantworten hat. Dies kann nur dadurch verhindert werden, dass man sich ausdrücklich von diesem Inhalt distanziert. Für alle Links auf dieser Homepage gilt: Wir distanzieren uns hiermit ausdrücklich von allen Inhalten aller gelinkten Seiten auf dieser Homepage und machen uns diese Inhalte nicht zu Eigen.</p>
+      <br>
+      Trotz sorgf&auml;ltiger inhaltlicher Kontrolle &uuml;bernehmen wir keine Haftung f&uuml;r die Inhalte externer Links. F&uuml;r den Inhalt der verlinkten Seiten sind ausschlie&szlig;lich deren Betreiber verantwortlich. Mit dem Urteil vom 12. Mai 1998 hat das Landgericht Hamburg entschieden, dass man durch die Anbringung eines Links die Inhalte der gelinkten Seiten ggf. mit zu verantworten hat. Dies kann nur dadurch verhindert werden, dass man sich ausdr&uuml;cklich von diesem Inhalt distanziert. F&uuml;r alle Links auf dieser Homepage gilt: Wir distanzieren uns hiermit ausdr&uuml;cklich von allen Inhalten aller gelinkten Seiten auf dieser Homepage und machen uns diese Inhalte nicht zu Eigen.</p>
     <h3>PPSN 2 DO - Team</h3>
     K. Schmidt<br>
     karl.p.schmidt (at) campus.tu-berlin.de<br>
     <br>
     T. Tietz<br>
-    t.tietz (at) campus.tu-berlin.de
-  </div>
+    t.tietz (at) campus.tu-berlin.de </div>
   <footer class="row text-center">
     <section class="col-xs-12">
       <nav class="navbar">
