--- a/createEntry.html
+++ b/createEntry.html
@@ -51,8 +51,8 @@
       </div>
       <div class="col-xs-12 form-group text-center">
         <button type="submit" class="btn btn-primary" id="saveButton">Save</button>
-        <button type="submit" class="btn btn-default" id="resetButton">Reset</button>
-        <button type="submit" class="btn btn-default" id="cancelButton">Cancel</button>
+        <button type="reset" class="btn btn-default" id="resetButton">Reset</button>
+        <button type="button" class="btn btn-default" id="cancelButton">Cancel</button>
       </div>
     </form>
   </div>
