--- a/editEntry.html
+++ b/editEntry.html
@@ -52,7 +52,7 @@
       </div>
       <div class="col-xs-12 form-group text-center">
         <button type="submit" class="btn btn-primary" id="saveButton">Save changes</button>
-        <button type="submit" class="btn btn-default" id="cancelButton">Cancel</button>
+        <button type="button" class="btn btn-default" id="cancelButton">Cancel</button>
       </div>
     </form>
   </div>
