--- a/createEntry.html
+++ b/createEntry.html
@@ -20,7 +20,7 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="createEntry.html">New Entry</a></li>
-            <li><a href="impress.html">Impress</a></li>
+            <li><a href="imprint.html">Imprint</a></li>
           </ul>
           <a class="navbar-brand navbar-right hidden-xs" href="http://www.tu-berlin.de" target="blank"><img alt="Technische Universität Berlin" src="img/tub_logo.png" width="25"></a> </div>
       </div>
@@ -62,7 +62,7 @@
         <ul class="nav nav-pills" style="display: inline-block !important">
           <li><a href="index.html">Home</a></li>
           <li><a href="createEntry.html">New Entry</a></li>
-          <li><a href="impress.html">Impress</a></li>
+          <li><a href="imprint.html">Imprint</a></li>
         </ul>
       </nav>
     </section>
