--- a/editEntry.html
+++ b/editEntry.html
@@ -22,7 +22,6 @@
             <li><a href="createEntry.html">New Entry</a></li>
             <li><a href="imprint.html">Impress</a></li>
           </ul>
-          <a class="navbar-brand navbar-right hidden-xs" href="http://www.tu-berlin.de" target="blank"><img alt="Technische Universität Berlin" src="img/tub_logo.png" width="25"></a>
         </div>
       </div>
     </nav>
@@ -57,16 +56,16 @@
     </form>
   </div>
   <footer class="row text-center">
-    <section class="col-xs-12">
-      <nav class="navbar">
-        <ul class="nav nav-pills" style="display: inline-block !important">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="createEntry.html">New Entry</a></li>
-          <li><a href="imprint.html">Imprint</a></li>
-        </ul>
-      </nav>
-    </section>
-    <p class="col-xs-12 copy text-uppercase">2015 Technische Universit&auml;t Berlin<br>
+    <nav class="col-xs-12 navbar">
+      <ul class="nav nav-pills" style="display: inline-block !important">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="createEntry.html">New Entry</a></li>
+        <li><a href="imprint.html">Imprint</a></li>
+      </ul>
+    </nav>
+    <p class="col-xs-12 copy text-uppercase"> <a href="https://www.cit.tu-berlin.de/"><img alt="Complex and Distributed IT Systems" src="img/cit_logo.jpg" width="100"></a><br>
+      <br>
+      2015 Technische Universit&auml;t Berlin<br>
       &times; CIT Programmierpraktikum &times;<br>
       T. Tietz, K. Schmidt</p>
   </footer>
