--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
             <li><a href="createEntry.html">New Entry</a></li>
             <li><a href="imprint.html">Imprint</a></li>
           </ul>
-          <a class="navbar-brand navbar-right hidden-xs" href="http://www.tu-berlin.de" target="blank"><img alt="Technische Universität Berlin" src="img/tub_logo.png" width="25"></a>
         </div>
       </div>
     </nav>
@@ -51,8 +50,8 @@
         <th>Date</th>
         <th>Description</th>
         <th>Progress</th>
-        <th width="60">Edit</th>
-        <th width="60">Delete</th>
+        <th>Edit</th>
+        <th>Delete</th>
       </tr>
       <tr class="success">
         <td>23. April 2015</td>
@@ -60,9 +59,7 @@
         <td><div class="progress">
             <div class="progress-bar" style="min-width: 0%; width: 100%;">100%</div>
           </div></td>
-        <td><a href="editEntry.html">
-          <button type="button" class="btn btn-primary btn-xs btn-block"><span class="glyphicon glyphicon-pencil"></span></button>
-          </a></td>
+        <td><button type="button" class="btn btn-primary btn-xs btn-block"><span class="glyphicon glyphicon-pencil"></span></button></td>
         <td><button type="button" class="btn btn-default btn-xs btn-block"><span class="glyphicon glyphicon-trash"></span></button></td>
       </tr>
       <tr class="warning">
@@ -71,9 +68,7 @@
         <td><div class="progress">
             <div class="progress-bar" style="min-width: 2em; width: 10%;">10%</div>
           </div></td>
-        <td><a href="editEntry.html">
-          <button type="button" class="btn btn-primary btn-xs btn-block"><span class="glyphicon glyphicon-pencil"></span></button>
-          </a></td>
+        <td><button type="button" class="btn btn-primary btn-xs btn-block"><span class="glyphicon glyphicon-pencil"></span></button></td>
         <td><button type="button" class="btn btn-default btn-xs btn-block"><span class="glyphicon glyphicon-trash"></span></button></td>
       </tr>
       <tr>
@@ -82,9 +77,7 @@
         <td><div class="progress">
             <div class="progress-bar" style="min-width: 2em; width: 15%;">15%</div>
           </div></td>
-        <td><a href="editEntry.html">
-          <button type="button" class="btn btn-primary btn-xs btn-block"><span class="glyphicon glyphicon-pencil"></span></button>
-          </a></td>
+        <td><button type="button" class="btn btn-primary btn-xs btn-block"><span class="glyphicon glyphicon-pencil"></span></button></td>
         <td><button type="button" class="btn btn-default btn-xs btn-block"><span class="glyphicon glyphicon-trash"></span></button></td>
       </tr>
       <tr class="danger">
@@ -93,9 +86,7 @@
         <td><div class="progress">
             <div class="progress-bar" style="min-width: 2em; width: 20%;">20%</div>
           </div></td>
-        <td><a href="editEntry.html">
-          <button type="button" class="btn btn-primary btn-xs btn-block"><span class="glyphicon glyphicon-pencil"></span></button>
-          </a></td>
+        <td><button type="button" class="btn btn-primary btn-xs btn-block"><span class="glyphicon glyphicon-pencil"></span></button></td>
         <td><button type="button" class="btn btn-default btn-xs btn-block"><span class="glyphicon glyphicon-trash"></span></button></td>
       </tr>
       <tr class="warning">
@@ -104,9 +95,7 @@
         <td><div class="progress">
             <div class="progress-bar" style="min-width: 2em; width: 25%;">25%</div>
           </div></td>
-        <td><a href="editEntry.html">
-          <button type="button" class="btn btn-primary btn-xs btn-block"><span class="glyphicon glyphicon-pencil"></span></button>
-          </a></td>
+        <td><button type="button" class="btn btn-primary btn-xs btn-block"><span class="glyphicon glyphicon-pencil"></span></button></td>
         <td><button type="button" class="btn btn-default btn-xs btn-block"><span class="glyphicon glyphicon-trash"></span></button></td>
       </tr>
     </table>
@@ -131,16 +120,16 @@
         <li><a href=""><span>&raquo;</span></a>
       </ul>
     </nav>
-    <section class="col-xs-12">
-      <nav class="navbar">
-        <ul class="nav nav-pills" style="display: inline-block !important">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="createEntry.html">New Entry</a></li>
-          <li><a href="imprint.html">Imprint</a></li>
-        </ul>
-      </nav>
-    </section>
-    <p class="col-xs-12 copy text-uppercase">2015 Technische Universit&auml;t Berlin<br>
+    <nav class="col-xs-12 navbar">
+      <ul class="nav nav-pills" style="display: inline-block !important">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="createEntry.html">New Entry</a></li>
+        <li><a href="imprint.html">Imprint</a></li>
+      </ul>
+    </nav>
+    <p class="col-xs-12 copy text-uppercase"> <a href="https://www.cit.tu-berlin.de/"><img alt="Complex and Distributed IT Systems" src="img/cit_logo.jpg" width="100"></a><br>
+      <br>
+      2015 Technische Universit&auml;t Berlin<br>
       &times; CIT Programmierpraktikum &times;<br>
       T. Tietz, K. Schmidt</p>
   </footer>
